clusters/my-cluster/sciflow/localhost-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-sciflow
  namespace: sciflow
spec:
  stripPrefix:
    prefixes:
      - /sciflow
