clusters/my-cluster/sciflow/orchestrator-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sciflow-orchestrator-controller
  namespace: sciflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: orchestrator-controller
      app.kubernetes.io/part-of: sciflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orchestrator-controller
        app.kubernetes.io/part-of: sciflow
    spec:
      serviceAccountName: sciflow-orchestrator
      imagePullSecrets:
        - name: sciflow-ghcr
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: sciflow-storage
          persistentVolumeClaim:
            claimName: sciflow-storage
      containers:
        - name: orchestrator-controller
          image: ghcr.io/yuanwuzhi/sciflow-orchestrator-controller
          imagePullPolicy: Always
          volumeMounts:
            - name: sciflow-storage
              mountPath: /var/lib/sciflow-storage
