clusters/my-cluster/sciflow/operations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sciflow-operations
  namespace: sciflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: operations
      app.kubernetes.io/part-of: sciflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: operations
        app.kubernetes.io/part-of: sciflow
    spec:
      serviceAccountName: sciflow-operations
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: operations
          image: ghcr.io/yuanwuzhi/sciflow-operations
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: sciflow-operations
  namespace: sciflow
spec:
  selector:
    app.kubernetes.io/name: operations
    app.kubernetes.io/part-of: sciflow
  ports:
    - name: http
      port: 80
      targetPort: http
